hphp/test/zend/bad/ext/date/tests/date_get_last_errors_basic.php
<?php
var_dump(date_get_last_errors()); // no date was parsed, so no errors
?>